--- a/client/app/components/admin/css/Create.css
+++ b/client/app/components/admin/css/Create.css
@@ -95,7 +95,7 @@
 }
 .key-value{
     width:510px !important;
-    margin: 0 10px !important;
+    margin: 0 0 !important;
 }
 .key-btn{
 	width:100px !important;
