--- a/client/app/components/admin/css/List.css
+++ b/client/app/components/admin/css/List.css
@@ -64,6 +64,12 @@ a:hover, a:active, a:focus{
 
 .admin-inner-panel{
     margin: 10px !important; 
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.admin-inner-panel:hover{
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .wrap-padding{
