--- a/client/app/components/admin/css/Admin.css
+++ b/client/app/components/admin/css/Admin.css
@@ -22,6 +22,7 @@ body{
 }
 
 .admin-card:hover{
+    margin: -5px !important;
     -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
